--- a/Password Keeper/Podfile
+++ b/Password Keeper/Podfile
@@ -12,4 +12,6 @@ target 'Password Keeper' do
   pod 'Firebase/Core'
   pod 'Firebase/Auth'
   pod 'Firebase/Firestore'
+  
+  pod 'Rosefire', :git => 'https://ada.csse.rose-hulman.edu/rosefire/ios-sdk.git'
 end
