--- a/Password Keeper/Podfile
+++ b/Password Keeper/Podfile
@@ -14,4 +14,5 @@ target 'Password Keeper' do
   pod 'Firebase/Firestore'
   
   pod 'Rosefire', :git => 'https://ada.csse.rose-hulman.edu/rosefire/ios-sdk.git'
+  pod 'GoogleSignIn'
 end
